src/main/java/com/example/articles/errors/AuthorNotFoundException.java
package com.example.articles.errors;

public class AuthorNotFoundException extends RuntimeException {
    public AuthorNotFoundException(String message) {
        super(message);
    }
}
